fix/text-visibility-on-file-names

--- a/packages/filebrowser/style/base.css
+++ b/packages/filebrowser/style/base.css
@@ -316,6 +316,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   user-select: none;
+  line-height: 1.2;
 }
 
 .jp-DirListing-item:has(.jp-DirListing-itemText:focus-visible) {
